[project]
name = "nano-banana-mcp"
version = "0.1.0"
description = "MCP server for AI image generation using Google's Nano Banana (Gemini) models"
readme = "README.md"
license = { text = "MIT" }
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.0.0",
    "google-genai>=1.0.0",
    "pydantic>=2.0.0",
]

[project.scripts]
nano-banana-mcp = "server:mcp.run"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["."]
